# ualyze

./: .gitmodules  LICENSE  README.md  meson.build
include/: ualyze.h
include/ualyze/: ual_bidi.h  ual_break.h  ual_buffer.h  ual_script.h
source/: break_machine.py  ual_bidi.cpp  ual_bidi_paragraph_level.cpp  ual_break.cpp  ual_buffer.cpp  ual_buffer.h  ual_internal.h  ual_paragraph.cpp  ual_script.cpp  uax14.rules  uax19.rules  uax29p3.rules
tests/: GraphemeBreakTest.txt  LineBreakTest.txt  bidi.test  clusterbreak.test  linebreak.test  meson.build  paragraph.test  script.test  testbidi.cpp  testcase.cpp  testfuzz.cpp  ualtest.cpp  ualtest.py  ucdtest.py  ucdtestbidi.py  ucdtestbreak.py
ucdb/: ucdb_bracket.cpp  ucdb_bracket.h  ucdb_bracket.py  ucdb_script.cpp  ucdb_script.h  ucdb_script.py  ucdb_table.cpp  ucdb_table.h  ucdb_table.py
ucdn/: ucdn.c  ucdn.h  ucdn_db.h
ucdu/: ucdu.cpp  ucdu.h  ucdu_table.h  ucdu_table.py
