
test_script = find_program( 'ualtest.py' )
test( 'paragraph.test', test_script, args : [ ualtest.full_path(), files( 'paragraph.test' ) ] )
test( 'linebreak.test', test_script, args : [ ualtest.full_path(), files( 'linebreak.test' ) ] )
test( 'clusterbreak.test', test_script, args : [ ualtest.full_path(), files( 'linebreak.test' ) ] )
test( 'script.test', test_script, args : [ ualtest.full_path(), files( 'script.test' ) ] )
test( 'bidi.test', test_script, args : [ ualtest.full_path(), files( 'bidi.test' ) ] )

test_script = find_program( 'ucdtest.py' )
test( 'GraphemeBreakTest', test_script, args : [ ualtest.full_path(), files( 'GraphemeBreakTest.txt' ) ] )
test( 'LineBreakTest[0]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '0', '1000' ], timeout : 60 )
test( 'LineBreakTest[1]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '1000', '2000' ], timeout : 60 )
test( 'LineBreakTest[2]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '2000', '3000' ], timeout : 60 )
test( 'LineBreakTest[3]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '3000', '4000' ], timeout : 60 )
test( 'LineBreakTest[4]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '4000', '5000' ], timeout : 60 )
test( 'LineBreakTest[5]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '5000', '6000' ], timeout : 60 )
test( 'LineBreakTest[6]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '6000', '7000' ], timeout : 60 )
test( 'LineBreakTest[7]', test_script, args : [ ualtest.full_path(), files( 'LineBreakTest.txt' ), '7000', '8000' ], timeout : 60 )
test( 'BidiCharacterTest', test_script, args : [ ualtest.full_path(), files( 'BidiCharacterTest.txt' ), '0', '223' ] )
test( 'BidiPermutations', test_script, args : [ ualtest.full_path(), files( 'BidiCharacterTest.txt' ), '223', '100000' ], timeout : 600 )
