
test_script = find_program( 'ualtest.py' )
test( 'paragraph.test', test_script, args : [ testcase.full_path(), files( 'paragraph.test' ) ], timeout : -1 )
test( 'linebreak.test', test_script, args : [ testcase.full_path(), files( 'linebreak.test' ) ], timeout : -1 )
test( 'clusterbreak.test', test_script, args : [ testcase.full_path(), files( 'linebreak.test' ) ], timeout : -1 )
test( 'script.test', test_script, args : [ testcase.full_path(), files( 'script.test' ) ], timeout : -1 )
test( 'bidi.test', test_script, args : [ testcase.full_path(), files( 'bidi.test' ) ], timeout : -1 )

test_script = find_program( 'ucdtestbreak.py' )
test( 'GraphemeBreakTest', test_script, args : [ testcase.full_path(), files( 'GraphemeBreakTest.txt' ) ], timeout : -1 )
test( 'LineBreakTest[0]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '0', '1000' ], timeout : -1 )
test( 'LineBreakTest[1]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '1000', '2000' ], timeout : -1 )
test( 'LineBreakTest[2]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '2000', '3000' ], timeout : -1 )
test( 'LineBreakTest[3]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '3000', '4000' ], timeout : -1 )
test( 'LineBreakTest[4]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '4000', '5000' ], timeout : -1 )
test( 'LineBreakTest[5]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '5000', '6000' ], timeout : -1 )
test( 'LineBreakTest[6]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '6000', '7000' ], timeout : -1 )
test( 'LineBreakTest[7]', test_script, args : [ testcase.full_path(), files( 'LineBreakTest.txt' ), '7000', '8000' ], timeout : -1 )

test_script = find_program( 'ucdtestbidi.py' )
test( 'BidiCharacterTest', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '0', '223' ], timeout : -1 )
test( 'BidiPermutations[0]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '223', '5000' ], timeout : -1 )
test( 'BidiPermutations[1]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '5000', '10000' ], timeout : -1 )
test( 'BidiPermutations[2]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '10000', '15000' ], timeout : -1 )
test( 'BidiPermutations[3]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '15000', '20000' ], timeout : -1 )
test( 'BidiPermutations[4]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '20000', '25000' ], timeout : -1 )
test( 'BidiPermutations[5]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '25000', '30000' ], timeout : -1 )
test( 'BidiPermutations[6]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '30000', '35000' ], timeout : -1 )
test( 'BidiPermutations[7]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '35000', '40000' ], timeout : -1 )
test( 'BidiPermutations[8]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '40000', '45000' ], timeout : -1 )
test( 'BidiPermutations[9]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '45000', '50000' ], timeout : -1 )
test( 'BidiPermutations[10]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '50000', '55000' ], timeout : -1 )
test( 'BidiPermutations[11]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '55000', '60000' ], timeout : -1 )
test( 'BidiPermutations[12]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '60000', '65000' ], timeout : -1 )
test( 'BidiPermutations[13]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '65000', '70000' ], timeout : -1 )
test( 'BidiPermutations[14]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '70000', '75000' ], timeout : -1 )
test( 'BidiPermutations[15]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '75000', '80000' ], timeout : -1 )
test( 'BidiPermutations[16]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '80000', '85000' ], timeout : -1 )
test( 'BidiPermutations[17]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '85000', '90000' ], timeout : -1 )
test( 'BidiPermutations[18]', test_script, args : [ testbidi.full_path(), files( 'BidiCharacterTest.txt' ), '90000', '100000' ], timeout : -1 )

test( 'BidiTest[0]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '0', '25000' ], timeout: -1 )
test( 'BidiTest[1]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '25000', '50000' ], timeout: -1 )
test( 'BidiTest[2]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '50000', '75000' ], timeout: -1 )
test( 'BidiTest[3]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '75000', '100000' ], timeout: -1 )
test( 'BidiTest[4]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '100000', '125000' ], timeout: -1 )
test( 'BidiTest[5]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '125000', '150000' ], timeout: -1 )
test( 'BidiTest[6]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '150000', '175000' ], timeout: -1 )
test( 'BidiTest[7]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '175000', '200000' ], timeout: -1 )
test( 'BidiTest[8]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '200000', '225000' ], timeout: -1 )
test( 'BidiTest[9]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '225000', '250000' ], timeout: -1 )
test( 'BidiTest[10]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '250000', '275000' ], timeout: -1 )
test( 'BidiTest[11]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '275000', '300000' ], timeout: -1 )
test( 'BidiTest[12]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '300000', '325000' ], timeout: -1 )
test( 'BidiTest[13]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '325000', '350000' ], timeout: -1 )
test( 'BidiTest[14]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '350000', '375000' ], timeout: -1 )
test( 'BidiTest[15]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '375000', '400000' ], timeout: -1 )
test( 'BidiTest[16]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '400000', '425000' ], timeout: -1 )
test( 'BidiTest[17]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '425000', '450000' ], timeout: -1 )
test( 'BidiTest[18]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '450000', '475000' ], timeout: -1 )
test( 'BidiTest[19]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '475000', '500000' ], timeout: -1 )
test( 'BidiTest[20]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '500000', '525000' ], timeout: -1 )
test( 'BidiTest[21]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '525000', '550000' ], timeout: -1 )
test( 'BidiTest[22]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '550000', '575000' ], timeout: -1 )
test( 'BidiTest[23]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '575000', '600000' ], timeout: -1 )
test( 'BidiTest[24]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '600000', '625000' ], timeout: -1 )
test( 'BidiTest[25]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '625000', '650000' ], timeout: -1 )
test( 'BidiTest[26]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '650000', '675000' ], timeout: -1 )
test( 'BidiTest[27]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '675000', '700000' ], timeout: -1 )
test( 'BidiTest[28]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '700000', '725000' ], timeout: -1 )
test( 'BidiTest[29]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '725000', '750000' ], timeout: -1 )
test( 'BidiTest[30]', test_script, args : [ testbidi.full_path(), files( 'BidiTest.txt' ), '750000', '775000' ], timeout: -1 )
